--- a/src/components/Sidebar.component.css
+++ b/src/components/Sidebar.component.css
@@ -1,11 +1,16 @@
-.sidebar{
+.sidebar {
     color: white;
     background-color: var(--slack-color);
     border-top: 1px solid #49274b;
     max-width: 260px;
 }
 
-.sidebar__header{
+.sidebar > hr{
+    margin-top: 10px 0;
+    border: 1px solid #49274b;
+}
+
+.sidebar__header {
     display: flex;
     border-bottom: 1px #49274b;
     padding-bottom: 10px;
@@ -20,12 +25,27 @@
     border-radius: 99px;
 }
 
-.sidebar__info{
+.sidebar__info {
     flex: 1;
 }
 
-.sidebar__info > h2{
+.sidebar__info > h2 {
     font-size: 15px;
-    font-weight: 500;
+    font-weight: 800;
     margin-bottom: 5px;
+}
+
+.sidebar__info > h3 {
+    display: flex;
+    align-items: center;
+    font-size: 13px;
+    font-weight: 400;
+}
+
+.sidebar__info > h3 > .MuiSvgIcon-root {
+    font-size: 14px;
+    margin-top: 6px;
+    margin-right: 4px;
+    margin-bottom: 5px;
+    color: green;
 }
